5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1800_2563.log
== TEST (2019-06-10 16:50:06) 
-- CODE:
from numpy import*

n = array(eval(input("Notas")))

n = 0
for i range(size(n))
	if n[i] > 5 and n[i] < 7
	n = n + 1
print(n)	
-- ERROR:
File "XXXX", line 6
    for i range(size(n))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:50:27) 
-- CODE:
from numpy import*

n = array(eval(input("Notas")))

n = 0
for i in range(size(n))
	if n[i] > 5 and n[i] < 7
	n = n + 1
print(n)	
-- ERROR:
File "XXXX", line 6
    for i in range(size(n))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:50:32) 
-- CODE:
from numpy import*

n = array(eval(input("Notas")))

n = 0
for i in range(size(n)):
	if n[i] > 5 and n[i] < 7
	n = n + 1
print(n)	
-- ERROR:
File "XXXX", line 7
    if n[i] > 5 and n[i] < 7
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:50:37) 
-- CODE:
from numpy import*

n = array(eval(input("Notas")))

n = 0
for i in range(size(n)):
	if n[i] > 5 and n[i] < 7:
	n = n + 1
print(n)	
-- ERROR:
File "XXXX", line 8
    n = n + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:50:50) 
-- CODE:
from numpy import*

n = array(eval(input("Notas")))

n = 0
for i in range(size(n)):
	if n[i] > 5 and n[i] < 7:
	n = n + 1
print(n)
-- ERROR:
File "XXXX", line 8
    n = n + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:50:55) 
-- CODE:
from numpy import*

n = array(eval(input("Notas")))

n = 0
for i in range(size(n)):
	if n[i] > 5 and n[i] < 7:
	n = n + 1
print(n)
-- ERROR:
File "XXXX", line 8
    n = n + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:53:29) 
-- CODE:
from numpy import*

n = array(eval(input("Notas")))

n = 0
for i in range(size(n)):
	if n[i] > 5 and n[i] < 7:

print(n)
-- ERROR:
File "XXXX", line 9
    print(n)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:53:43) 
-- CODE:
from numpy import*

n = array(eval(input("Notas")))

n = 0
for i in range(size(n)):
	if n[i] > 5 and n[i] < 7:
	n = n + 1
print(n)
-- ERROR:
File "XXXX", line 8
    n = n + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 16:53:44) 
-- CODE:
from numpy import*

n = array(eval(input("Notas")))

n = 0
for i in range(size(n)):
	if n[i] > 5 and n[i] < 7:
	n = n + 1
print(n)
-- EXECUTION TIME:
0.885407
-- ERROR:
  File "/home/codebench/codes/1800/2563/main.py", line 8
    n = n + 1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:53:50) 
-- CODE:
from numpy import*

n = array(eval(input("Notas")))

n = 0
for i in range(size(n)):
	n = 0
	if n[i] > 5 and n[i] < 7:
	n = n + 1
print(n)
-- ERROR:
File "XXXX", line 9
    n = n + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:53:54) 
-- CODE:
from numpy import*

n = array(eval(input("Notas")))


for i in range(size(n)):
	n = 0
	if n[i] > 5 and n[i] < 7:
	n = n + 1
print(n)
-- ERROR:
File "XXXX", line 9
    n = n + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:54:38) 
-- CODE:
from numpy import*

n = array(eval(input("Notas")))

n = 0
for i in range(size(n)):
	if n[i] > 5 and n[i] < 7:
		n = n + 1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:37:12) 
-- CODE:
from numpy import*

n = array(eval(input("Notas")))

n = 0
for i in range(size(n)):
	if n[i] > 5 
		n = n + 1
print(n)
-- ERROR:
File "XXXX", line 7
    if n[i] > 5 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:37:16) 
-- CODE:
from numpy import*

n = array(eval(input("Notas")))

n = 0
for i in range(size(n)):
	if n[i] > 5 :
		n = n + 1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:38:57) 
-- CODE:
from numpy import*

n = array(eval(input("Notas")))

n = 0
for i in range(size(n)):
	if n[i] > 5 and n[i] < 7:
		n = n + 1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:41:08) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

soma = 0

for i in range(size(n)):
	if( n[i] > 5 and n[i] < 7 ):
		soma = soma + 1
print(soma)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:42:57) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):

	soma = 0

	for i in range(size(n)):
		if( n[i] > 5 and n[i] < 7 ):
			soma = soma + 1
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:43:59) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):

	soma = 0

	for i in range(size(n)):
		if( n[i] > 5 and n[i] < 7 ):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:44:27) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):

	soma = 0

	for i in range(size(n)):
		if( n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:46:14) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in range(size(n)):
		if(n > 5 and n <= 7 ):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:46:48) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in range(size(n)):
		if(n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
			print(n[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:47:11) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in range(size(n)):
		if(n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
			print(n[i])
			n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:48:06) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in range(size(n)):
		if(n[i] >= 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:48:18) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in range(size(n)):
		if(n[i] >= 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
			print(n[i])
			n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:48:38) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in range(size(n)):
		if(n[i] >= 5 and n[i] <= 7 ):
			print(n[i])
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:51:48) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in range(size(n)):
		if(n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
		print(soma)
		n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:52:07) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in range(size(n)):
		if(n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:52:18) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in range(size(n)):
		if(n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
		n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:52:30) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in range(size(n)):
		if(n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:53:00) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in arrange(size(n)):
		if(n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:53:19) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in arange(size(n)):
		if(n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:10:00) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in arange(size(n)):
		print(i)
		if(n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:10:01) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in arange(size(n)):
		print(i)
		if(n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:10:01) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in arange(size(n)):
		print(i)
		if(n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:10:01) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in arange(size(n)):
		print(i)
		if(n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:10:01) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in arange(size(n)):
		print(i)
		if(n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:10:01) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in arange(size(n)):
		print(i)
		if(n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:10:01) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in arange(size(n)):
		print(i)
		if(n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:10:01) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in arange(size(n)):
		print(i)
		if(n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:10:01) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in arange(size(n)):
		print(i)
		if(n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:10:01) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in arange(size(n)):
		print(i)
		if(n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:10:02) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in arange(size(n)):
		print(i)
		if(n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:10:02) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in arange(size(n)):
		print(i)
		if(n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:10:02) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in arange(size(n)):
		print(i)
		if(n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:17:21) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in arange(size(n)):
		if(n[i] > 5 and n[i] <= 7 ):
			soma = soma + 1
			print(soma)
		n = array(eval(input("Notas:")))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:22:45) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
		for i in range(size(n)):
			if(n[i] >= 5 and n[i] < 7):
				soma = soma + 1
				print(soma)
-- ERROR:
File "XXXX", line 7
    for i in range(size(n)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:23:12) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
		for i in range(size(n)):
			if(n[i] >= 5 and n[i] < 7):
				soma = soma + 1
				print(soma)
-- ERROR:
File "XXXX", line 7
    for i in range(size(n)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:23:33) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in range(size(n)):
		if(n[i] >= 5 and n[i] < 7):
			soma = soma + 1
			print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:24:52) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in range(size(n)):
		if(n[i] >= 5 and n[i] < 7):
			soma = soma + 1
			print(soma)
			n = array(eval(input("Notas:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:25:16) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in range(size(n)):
		if(n[i] >= 5 and n[i] < 7):
			soma = soma + 1
			print(soma)
		n = array(eval(input("Notas:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:31:56) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in range(size(n)):
		if(n[i] >= 5 and n[i] < 7):
			soma = soma + 1
			print(soma)
		n = array(eval(input("Notas:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:33:17) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in (n):
		if(n[i] >= 5 and n[i] < 7):
			soma = soma + 1
			print(soma)
		n = array(eval(input("Notas:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:33:45) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in n:
		if(n[i] >= 5 and n[i] < 7):
			soma = soma + 1
			print(soma)
		n = array(eval(input("Notas:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:34:08) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in n:
		if(i >= 5 and i < 7):
			soma = soma + 1
			print(soma)
		n = array(eval(input("Notas:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:34:39) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in n:
		if(i >= 5 and i < 7):
			soma = soma + 1
			print(soma)
		n = array(eval(input("Notas:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:35:45) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in n:
		if(i >= 5 and i < 7):
			soma = soma + 1
			print(i)
		n = array(eval(input("Notas:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:35:46) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in n:
		if(i >= 5 and i < 7):
			soma = soma + 1
			print(i)
		n = array(eval(input("Notas:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:35:55) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in n:
		if(i >= 5 and i < 7):
			soma = soma + 1
			print(i)
		n = array(eval(input("Notas:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:23:41) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in n:
		if(i >= 5 and i < 7):
			soma = soma + 1
			print(soma)
	n = array(eval(input("Notas:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:24:25) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in n:
		if(i >= 5 and i < 7):
			soma = soma + 1
	n = array(eval(input("Notas:")))
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 19:24:42) 
-- CODE:
from numpy import*

n = array(eval(input("Notas:")))

while(size(n)>1):
	soma = 0
	for i in n:
		if(i >= 5 and i < 7):
			soma = soma + 1
	n = array(eval(input("Notas:")))
	print(soma)
-- EXECUTION TIME:
0.819119
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
